[package]
name = "orchestration-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
eframe = "0.26.2"
# eframe = { path = "../egui/crates/eframe" }
egui_extras = { version = "0.26.2", features = ["all_loaders"] }
# egui_extras = { path = "../egui/crates/egui_extras", features = ["all_loaders"] }
graphviz-rust = "0.7.2"
once_cell = "1.19.0"
parking_lot = { version = "0.12.1", features = ["deadlock_detection"] }
reqwest = { version = "0.11.27", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter", "std", "registry"] }
